--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8080
 # Define la API key esperada (en prod preferible usar env var)
-app.api.key=${APP_API_KEY:mi_api_key_de_prueba}
+app.api.key=${APP_API_KEY:api_key_progra}
 logging.level.root=INFO
