--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,6 +1,21 @@
 server.address=0.0.0.0
+# Puerto del servidor
 server.port=8080
+
+# Clave usada por tu ApiKeyFilter (app key interna). Por defecto para pruebas:
 app.api.key=${APP_API_KEY:api_key_progra}
-gemini.api.key=${GEMINI_API_KEY:AIzaSyCoz3t-eB9bDnYOpneEcWc7Wl9RWFNfAXg}
+
+# Clave para DeepSeek (recomiendo usar variable de entorno DEEPSEEK_API_KEY)
+# Valor por defecto sólo para pruebas locales (reemplaza o borra en prod)
+deepseek.api.key=${DEEPSEEK_API_KEY:sk-75f25927aa6a4a19b33a4d1e2906d437}
+
+# (Opcional) Si aún necesitas la clave de Gemini mantenla aquí (pero no se usará si migras)
+gemini.api.key=${GEMINI_API_KEY:}
+
+# Logging
 logging.level.root=INFO
-logging.level.com.tuorg.calcservice=DEBUG
+logging.level.com.tuorg.calcservice.service=DEBUG
+
+# Jackson / zona horaria (opcional)
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSSZ
+spring.jackson.time-zone=UTC
