--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -7,7 +7,7 @@ app.api.key=${APP_API_KEY:api_key_progra}
 
 # Clave para DeepSeek (recomiendo usar variable de entorno DEEPSEEK_API_KEY)
 # Valor por defecto sólo para pruebas locales (reemplaza o borra en prod)
-deepseek.api.key=${DEEPSEEK_API_KEY:sk-75f25927aa6a4a19b33a4d1e2906d437}
+deepseek.api.key=sk-75f25927aa6a4a19b33a4d1e2906d437
 
 # (Opcional) Si aún necesitas la clave de Gemini mantenla aquí (pero no se usará si migras)
 gemini.api.key=${GEMINI_API_KEY:}
